--- a/tencent.html
+++ b/tencent.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-    <title>Upload</title>
+    <title>zmone图床</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.2.3/css/bootstrap.min.css" rel="stylesheet">
     <link href="/asset/css/notifyme.css" rel="stylesheet">
@@ -38,9 +38,9 @@
                     <li class="nav-item">
                         <a class="nav-link " href="/">TG</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link " href="./mt.html">meituan</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link active" href="./tencent.html">tencent</a>
                     </li>
@@ -140,9 +140,7 @@
 
     <footer class="footer">
         <div class="container text-center">
-            <p class="text-muted">Copyright Ⓒ 2023 All rights reserved. 请勿上传违反中国法律的图片，违者后果自负。
-                本程序基于Telegraph，开源于GitHub <a href="https://github.com/x-dr/telegraph-Image"
-                    target="_blank">telegraph-Image</a></p>
+            <p class="text-muted">请勿上传违反中国法律的图片，基于tencent！</p>
         </div>
     </footer>
     <div id="lightbox-overlay" class="lightbox-overlay">
